@@ -1,3 +1,7 @@
+Sat Dec 26 18:21:17 2015  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* tool/post-commit.sh: copied from svn server.
+
 Sat Dec 26 11:26:38 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* miniinit.c (Init_enc): add some common aliases of built-in
